dom editing lab

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My HTML Adventure</title>
+  </head>
+  <body>
+    <h1>My HTML adventure</h1>
+    <p>
+      This is a <strong>paragraph</strong> with an <em>emphasis</em> and a link to 
+      <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">Mozilla HTML docs</a>.
+    </p>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>Pitt</td>
+        <td>25</td>
+      </tr>
+      <tr>
+        <td>Shiru</td>
+        <td>30</td>
+      </tr>
+    </table>
+  </body>
+</html>
+
